Struttura generale html-css

--- a/Home.html
+++ b/Home.html
@@ -3,10 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Natural_Lite</title>
+    <link rel="stylesheet" href="Style.css">
   </head>
   <body>
     <header>
       <section id="intestazione">
+        <img src="" alt="">
         <h1>Natural Lite</h1>
         <h2>Just another organic themes demo sites site</h2>
       </section>
@@ -176,6 +178,9 @@
       </div>
       <div class="footersect">
 
+      </div>
+      <div id="copyandcontacts">
+        
       </div>
 
     </footer>
